# LiveCodeBench

./: pyproject.toml
lcb_runner/benchmarks/: __init__.py  code_execution.py  code_generation.py  test_output_prediction.py
lcb_runner/evaluation/: __init__.py  compute_code_execution_metrics.py  compute_code_generation_metrics.py  compute_scores.py  compute_test_output_prediction_metrics.py  old_results_check.py  pass_k_utils.py  testing_util.py  utils_execute.py
lcb_runner/prompts/: __init__.py  code_execution.py  code_generation.py  self_repair.py  test_output_prediction.py
lcb_runner/runner/: base_runner.py  claude3_runner.py  custom_evaluator.py  gemini_runner.py  main.py  parser.py  runner_utils.py  scenario_router.py  vllm_runner.py
lcb_runner/utils/: extraction_utils.py  multiprocess.py
